--- a/web.config
+++ b/web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -8,6 +8,8 @@
 <configuration>
 
     <system.web>
+        <roleManager enabled="true" />
+        <authentication mode="Forms" />
         <compilation debug="false" targetFramework="4.0" />
     </system.web>
 
