--- a/web.config
+++ b/web.config
@@ -5,6 +5,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+    
+    <connectionStrings>
+        <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;User Instance=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <system.web>
         <roleManager enabled="true" />
         <authentication mode="Forms" />
