--- a/web.config
+++ b/web.config
@@ -1,18 +1,40 @@
 <?xml version="1.0"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+	<system.web>
+		<roleManager enabled="true"/>
+    <authentication mode="Forms">
+      <forms loginUrl="auth/Login.aspx" name=".ASPXFORMSAUTH">
+      </forms>
+      
+    </authentication>
+		<compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+      </assemblies>
+    </compilation>
+
+    <!--Allow simpler passwords-->
+    <membership defaultProvider="CustomizedProvider">
+      <providers>
+        <add name="CustomizedProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="LocalSqlServer" minRequiredPasswordLength="5" minRequiredNonalphanumericCharacters="0"/>
+      </providers>
+    </membership>
+    <!--My extra Sitemaps-->
+    <siteMap enabled="true">
+      <providers>
+        <add name="AdminSitemap" type="System.Web.XmlSiteMapProvider" siteMapFile="Admin.sitemap"/>
+        <add name="UserSitemap" type="System.Web.XmlSiteMapProvider" siteMapFile="User.sitemap"/>
+      </providers>
+    </siteMap>
     
-    <connectionStrings>
-        <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;User Instance=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
-    <system.web>
-        <roleManager enabled="true" />
-        <authentication mode="Forms" />
-        <compilation debug="false" targetFramework="4.0" />
-    </system.web>
+	</system.web>
 </configuration>
